@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.3.2
+  	- Fixed issue with transcoding not changing the mime type or the
+		filename, currently hardcodes to mp3 and audio/mpeg
   	- Updated Spanish Translation (Thx Bgordon)
 	- Fixed potential for a foreach() error on vainfo if no tags are
 		found, and fixed quicktime (mp4) tag reading
